# wireguard-pg

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: .p10k.zsh  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release.yml
docker/: entrypoint.sh
src/: app.py  app_api.py  app_noapi.py  config.py  logging.yml
src/endpoints/: __init__.py  interface.py  link.py  peer.py  tool.py  user.py
src/lib/: db copy.py  db.py  helper.py
src/migration/: sturcture.sql  update_0.1.0.sql
src/model/: base.py  formatter.py  interface.py  link.py  peer.py  server.py  user.py
src/templates/: client.conf.j2  client_generator.conf.j2  interface_full.conf.j2  interface_update.conf.j2
