[project]
name = "wireguard_server"
version = "0.1.0"
description = "WireGuard configured by SQL"
authors = [
    {name = "Martin Korbel", email = "korbel@blackserver.cz"},
]
dependencies = [
    "asyncpg>=0.30.0",
    "pyyaml>=6.0.2",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pyjwt>=2.10.1",
    "packaging>=24.2",
    "python-multipart>=0.0.20",
    "loggate>=1.12.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false
